hphp/test/slow/parser/multiple_access_modifiers.php.expectf

Fatal error: A method declaration cannot have multiple visibility modifiers. in %s/multiple_access_modifiers.php on line 3
